# dogo

./: Cargo.toml  README.md  db.json
.github/workflows/: publish.yml
src/: database.rs  lib.rs  main.rs  maven.rs
src/commands/: github.rs  mod.rs  repo.rs  search.rs  set.rs
