[package]
name = "dogo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
colored = "2.0.0"
fancy-regex = "0.10.0"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
ureq = "2.5.0"
url = "2.2.2"
