[package]
name = "dogo"
version = "1.0.0-rc.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI
clap = { version = "3.2.16", features = ["derive"] }

colored = "2.0.0"
fancy-regex = "0.10.0"

# JSON
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"

# URL
url = "2.2.2"

# XML Parsing
serde-xml-rs = "0.6.0"

# Networking
bytes = "1.3.0"
reqwest = { version = "0.11.14", features = ["blocking"] }
sqlite = "0.30.3"
